# MontyHall

./: .gitignore  README.md  clean.sh  pyproject.toml
latex/: document.tex
montyhall/: .RData  data_analysis.R  data_analysis.py  database.py  main.py  montyhallgame.py
